# soc-toolkit

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  commit_msg.txt  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  codeql.yml
sample_data/: sample_iocs.txt  sample_phishing.eml
soc_toolkit/: cli.py  config.py
soc_toolkit/components/: theme.py
soc_toolkit/core/: enrichment.py  phishing.py  report.py  yara_scan.py
soc_toolkit/dashboard/: app.py
soc_toolkit/rules/: sample_rules.yar
soc_toolkit/styles/: style.css
soc_toolkit/templates/: report.html
soc_toolkit/utils/: cache.py  logger.py  validators.py
tests/: test_enrichment.py  test_phishing.py  test_validators.py
