[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soc-toolkit"
version = "1.0.0"
description = "An all-in-one Python automation toolkit for SOC / security analysts: IOC enrichment, phishing triage, and YARA scanning."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SOC Toolkit Contributors" }]
keywords = ["cybersecurity", "soc", "security-automation", "threat-intelligence", "yara", "phishing", "blue-team"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "streamlit>=1.32.0",
    "pandas>=2.1.0",
    "jinja2>=3.1.3",
    "tldextract>=5.1.1",
    "yara-python>=4.3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0", "flake8>=7.0.0"]

[project.scripts]
soc-toolkit = "soc_toolkit.cli:main"

[tool.setuptools.packages.find]
include = ["soc_toolkit*"]

[tool.setuptools.package-data]
soc_toolkit = ["rules/*.yar", "templates/*.html"]
